--- a/public/css/customstyle.css
+++ b/public/css/customstyle.css
@@ -2,6 +2,12 @@
     -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
+@font-face
+{
+    font-family: Gnuolane;
+    src: url('font/gnuolane_rg.otf');
+}
+
 body { 
     font-family: Arial;
 
@@ -29,22 +35,22 @@ header {
 
 
 .front-page-desc {
-font-size: 1.1em;
-margin-top: 392px;
-position: absolute;
+    font-size: 1.1em;
+    margin-top: 392px;
+    position: absolute;
 
-width: 650px;
-color: #fff;
-display: block;
-text-decoration: none;
-background: rgba(33, 33, 33, .7);
-text-align: center;
-padding: 30px;
-text-align: left;
-font-size: .9em;
--webkit-transition: all 0.4s;
--moz-transition: all 0.4s;
-transition: all 0.4s;
+    width: 650px;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    background: rgba(33, 33, 33, .7);
+    text-align: center;
+    padding: 30px;
+    text-align: left;
+    font-size: .9em;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
 
@@ -64,18 +70,18 @@ a:active {text-decoration:underline;}
 }
 
 /*nav#inner-nav {
-    margin-top: 45px;
-    float:right;
-    text-align:right;
-    font-size: .83em;
+  margin-top: 45px;
+  float:right;
+  text-align:right;
+  font-size: .83em;
 
 }
 
 nav#inner-nav a {
-    display:inline-block;
+display:inline-block;
 
-    color: #555;
-    margin: 0 10px;
+color: #555;
+margin: 0 10px;
 }
 */
 .divider {
@@ -162,11 +168,14 @@ footer {
 }
 
 h1 {
-    font-family: "Arial Narrow", Arial;
-    color: #81d367;
-    font-weight:100;
+    font-family:"Gnuolane";
+    clear: both;
+    font-size: 3em;
+    font-weight: 100;
+    text-align: center;
+    margin-bottom: 10px;
+    line-height: 2em;
 }
-
 
 h2 {
     font-family: "Arial Narrow", Arial;
@@ -258,13 +267,25 @@ ul {list-style-image: url('images/bullet.png');}
 }
 .area-3-col img {
     border: solid 1px #c4c0c0;
+
 }
 
 .three-col {
     width:33.33333333%;
     float:left;
-
+    padding: 10px;
 }
+
+.three-col.one {
+    background: red;
+}
+.three-col.two {
+    background: yellow;
+}
+.three-col.three {
+    background:green;
+}
+
 
 .area-part {
     width:100%;
@@ -347,35 +368,35 @@ button:hover {
 }
 
 /*.custom-sign-up-block {
-position: relative;
-font-size: 1.1em;
-margin-top: 392px;
-height: 96px;
-color: #fff;
-display: block;
-text-decoration: none;
-background: rgba(33, 33, 33, .7);
-text-align: center;
-padding: 30px;
--webkit-transition: all 0.4s;
--moz-transition: all 0.4s;
-transition: all 0.4s;
-}*/
+  position: relative;
+  font-size: 1.1em;
+  margin-top: 392px;
+  height: 96px;
+  color: #fff;
+  display: block;
+  text-decoration: none;
+  background: rgba(33, 33, 33, .7);
+  text-align: center;
+  padding: 30px;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  }*/
 
- #inner-nav  {
+#inner-nav  {
     font-family: 'Gnuolane';
     line-height: normal;
     font-size: 1.5em;    float: right;
     list-style-type: disc;
     margin:0;
-    /*set it to the top of the page*/
-  }
+/*set it to the top of the page*/
+}
 
-  #inner-nav {
+#inner-nav {
     display:inline-block;
-  }
+}
 
-  #inner-nav li {
+#inner-nav li {
     display:inline-block;
     padding:10px;
     background: rgba(33,33,33,.6);
@@ -383,35 +404,53 @@ transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
-  }
-  #inner-nav li:hover {
-        background: rgba(33,33,33,.8);
+}
+#inner-nav li:hover {
+    background: rgba(33,33,33,.8);
 /*    background: rgba(18, 115, 154, .7);
-*/  }
+ */  }
 
-  #inner-nav li:active {
-        background: rgba(33,33,33,1);
+#inner-nav li:active {
+    background: rgba(33,33,33,1);
 /*    background: rgba(18, 115, 154, 1);
-*/  }
+ */  }
 
-  #inner-nav li.first {
+#inner-nav li.first {
     padding-left: 15px;
-  }
+}
 
-  #inner-nav li.last {
+#inner-nav li.last {
     padding-right: 15px;
-  }
+}
 
-  #inner-nav li a:link, #main-menu li a:visited  {
+#inner-nav li a:link, #main-menu li a:visited  {
     color:white;
     text-decoration: none;
-  }
+}
 
-  #inner-nav ul {
+#inner-nav ul {
     float: right;
     margin:0;
-  }
+}
 
 .main {
-padding: 20px;
+    border: solid 1px #808080;
+    border-bottom: none;
+    background: white;
+    color: #4D4D4D;
+    background-image: url('images/hard-border-bottom-half.png');
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    -webkit-box-shadow: 0px 0px 10px #888888;
+    -moz-box-shadow: 0px 0px 10px #888888;
+    box-shadow: 0px 0px 10px #888888;
+    padding: 20px;
+}
+
+
+.block {
+    background-image: url('images/soft-border.png');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    padding: 1.5em 0 1em 0;
 }
