--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 
 	    <li><a href="#">Contact Us</a></li>
 </nav>
-<div class="front-page-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+<div class="front-page-desc">Hack Pack is the shiz. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
 </header>
 <div class="view" ng-view></div>
 <footer>
