--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,34 +13,35 @@
     <div id="wrapper">
       <div id="page">
 	<header>
-	  <div id="logo"></div>
-	  <!--	  <input id="search" type=search name=s>-->
 	  <ul id="inner-nav">
 	    <li><a href="#">Blog</a></li>
 
-	    <li><a href="#">Support Portal</a></li>
+	    <li><a href="#"> Portal</a></li>
 
 	    <li><a href="#">Partner Portal</a></li>
 
 	    <li><a href="#">Contact Us</a></li>
-</nav>
-<div class="front-page-desc">Hack Pack is the shiz. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
-</header>
-<div class="view" ng-view></div>
-<footer>
-</footer>
-</div>
-</div>
+	  </ul>
 
-  <!-- In production maybe use a CDN -->
-  <script src="js/lib/angular/angular.js"></script>
-  <script src="js/lib/angular/angular-route.js"></script>
-  
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers/home.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
+	  <div id="logo"></div>
+	  <!--	  <input id="search" type=search name=s>-->
+	  <div class="front-page-desc">Hack PAC is the shiz. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
+	</header>
+	<div class="view" ng-view></div>
+	<footer>
+	</footer>
+      </div>
+    </div>
+
+    <!-- In production maybe use a CDN -->
+    <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular/angular-route.js"></script>
+    
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers/home.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/directives.js"></script>
+  </body>
 </html>
 
