--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -12,10 +12,81 @@
     </div>
   </div>
   <div class="block">
-    <h1>What is HackPAC?</h1>
+    <h1>Donate to HackPAC!</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  
+<form action="" method="POST" id="payment-form">
+  <span class="payment-errors"></span>
+
+  <div class="biographical-input">
+    <label>
+      <span>Username</span>
+      <input type="text" size="20" name="username"/>
+    </label><br>
+    <label>
+      <span>First Name</span>
+      <input type="text" size="20" name="firstName"/>
+    </label>
+    <label>
+      <span>Last Name</span>
+      <input type="text" size="20" name="lastName"/>
+    </label><br>
+    <label>
+      <span>Street Address</span>
+      <input type="text" size="20" name="streetAddress1"/>
+    </label><br>
+    <label>
+      <input type="text" size="20" name="streetAddress2"/>
+    </label><br>
+    <label>
+      <span>City</span>
+      <input type="text" size="20" name="city"/>
+    </label><br>
+    <label>
+      <span>State / Province</span>
+      <input type="text" size="20" name="state"/>
+    </label><br>
+    <label>
+      <span>Country</span>
+      <input type="text" size="20" name="country"/>
+    </label><br>
+    <label>
+      <span>Zip Code</span>
+      <input type="text" size="20" name="zipCode"/>
+    </label><br>
+    <label>
+      <span>Occupation</span>
+      <input type="text" size="20" name="occupation"/>
+    </label>
+    <label>
+      <span>Phone Number</span>
+      <input type="text" size="20" data-stripe="phoneNumber"/>
+    </label>
   </div>
+  <div class="form-row">
+    <label>
+      <span>Card Number</span>
+      <input type="text" size="20" data-stripe="number"/>
+    </label>
+  </div>
+  <div class="form-row">
+    <label>
+      <span>CVC</span>
+      <input type="text" size="4" data-stripe="cvc"/>
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>Expiration (MM/YYYY)</span>
+      <input type="text" size="2" data-stripe="exp-month"/>
+    </label>
+    <span> / </span>
+    <input type="text" size="4" data-stripe="exp-year"/>
+  </div>
+
+  <button type="submit">Submit Payment</button>
+</form></div>
   <div class="block">
     <h1>What is HackPAC?</h1>
     <p>
