Added payment form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,10 @@
     <script src="js/controllers/home.js"></script>
     <script src="js/filters.js"></script>
     <script src="js/directives.js"></script>
+    <script type='text/javascript' src='js/jquery.js'></script>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript" src="js/payments.js"></script>
+
   </body>
 </html>
 
